# agenda

./: .gitignore  README.md
agenda_backend/: main.py  pyproject.toml
agenda_backend/agenda_backend/: calendar_events.py
agenda_backend/agenda_backend/LLM_completion/: groq_completions.py  prompts.py
